<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComentariosActivity" >

    <TextView
        android:id="@+id/centro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/comentario"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/labelCentro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/comentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ratingBar1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:text="@string/buttonCancelar"
        android:onClick="regresarMapa" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/comentario"
        android:text="@string/buttonComentar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar1"
        android:layout_alignLeft="@+id/ratingBar1"
        android:text="@string/calificaCentro"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/comentario"
        android:layout_marginBottom="21dp" />
    
</RelativeLayout>
